--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -67,6 +67,12 @@ h5 {
 /*FORMS
 --------------------------------------*/
 
+.formstart {
+	display: block;
+	position: relative;
+	width: 610px;
+	margin: 0 auto;
+}
 
 
 p.form-field.email.pd-text.required.no-label {
@@ -266,7 +272,6 @@ a:active {
 	display: block;
     background-color: #990AE3;
     width: 100%;
-    height: 500px;
     position: relative;
 }
 
