--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -136,7 +136,7 @@ p.error.no-label {
 
 form.form p.errors {
     background: #ff3264 !important;
-    width: 20%;
+    width: 610px;
     color: #fff;
     padding-left: .5em;
     margin-bottom: 1em;
