--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -91,6 +91,13 @@ p.submit {
 	position: relative;
 }
 
+form.form p {
+    clear: left;
+    line-height: 1.4em;
+    margin: 0 0 !important;
+    padding: 0 0 !important;
+}
+
 form.form p.submit {
     margin: 0 0 2em 40px !important;
     padding: 0;
@@ -143,7 +150,7 @@ form.form p.errors {
 }
 
 form.form input.text {
-    width: 435px !important;
+    width: 430px !important;
     height: 46px !important;
     border: none !important;
     font-size: 16px;
