--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -293,12 +293,13 @@ a:active {
 	margin: 0 auto;
 	text-align: center;
 	text-transform: uppercase;
+	margin-top: 2em;
 }
 
 .description {
 	display: block;
 	position: relative;
-	width: 610px;
+	width: 600px;
 	margin: 0 auto;
 }
 
