--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -320,7 +320,6 @@ a:active {
 	display: block;
 	background-color: #fff;
 	width: 100%;
-	height: 500px;
 }
 
 .break {
@@ -333,7 +332,6 @@ a:active {
     top: 50%;
     transform: translateY(-60%);
 }
-}
 
 /*FOOTER
 --------------------------------------*/
@@ -342,7 +340,7 @@ a:active {
 	background-color: #990AE3;
 	color: #fff;
 	width: 100%;
-    height: 400px;
+    height: 400px !important;
     position: relative;
 }
 
