--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -316,18 +316,18 @@ a:active {
 	font-size: 16px;
 }
 
+.break {
+	display: block;
+	height: 200px;
+}
+
 .information {
 	display: block;
 	background-color: #fff;
 	width: 100%;
 }
 
-.break {
-	display: block;
-	height: 200px;
-}
-
-.infoimgdescript {
+.below {
 	position: relative;
     top: 50%;
     transform: translateY(-60%);
