--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -330,7 +330,31 @@ a:active {
 .below {
 	position: relative;
     top: 50%;
-    transform: translateY(-60%);
+    transform: translateY(-50%);
+}
+
+.recommend {
+	display: block;
+	position: relative;
+	margin: 0 auto;
+}
+
+.one {
+	display: block;
+	position: relative;
+	float: left;
+	width: 570px;
+	height: 285px;
+	background-color: #990AE3;
+}
+
+.two {
+	display: block;
+	position: relative;
+	float: right;
+	width: 570px;
+	height: 285px;
+	background-color: #990AE3;
 }
 
 /*FOOTER
