--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -403,8 +403,8 @@ a:active {
 
 .footersocial .inner .social {
 	position: relative;
-	top: 50%;
 	transform: translateY(-50%);
+	float: left;
 }
 
 
