--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -377,6 +377,13 @@ a:active {
 	opacity: 0.6;
 }
 
+.footer .columns {
+	display: block;
+	position: relative;
+  	top: 50%;
+  	transform: translateY(-50%);
+}
+
 .footer .inner div {
     float: left;
     width: 20%;
