--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -389,6 +389,8 @@ a:active {
     width: 20%;
     font-size: 14px;
     line-height: 2.5em;
+    position: relative;
+    top: -150px;
 }
 
 .footersocial {
