--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -64,6 +64,30 @@ h5 {
 	font-weight: normal;
 }
 
+button {
+	position: relative;
+	float: right;
+    border-color: #990ae3;
+    background-color: #FFF;
+    color: #000;
+    font-weight: 700;
+    border: 1px solid transparent;
+    font-size: .875rem;
+    border-radius: 30px;
+    line-height: 1;
+    height: 50px;
+    padding: 1.0625rem 1.875rem !important;
+    text-transform: uppercase;
+    letter-spacing: .08571428571em;
+    -webkit-transition: background-color .15s ease,color .15s ease;
+    transition: background-color .15s ease,color .15s ease;
+    white-space: nowrap;
+    vertical-align: middle;
+    display: inline-block;
+    cursor: pointer;
+    outline: none;
+}
+
 /*FORMS
 --------------------------------------*/
 
@@ -337,26 +361,29 @@ a:active {
 	position: relative;
 	margin: 0 auto;
 	height: 100%;
+	color: #fff;
 }
 
 .one {
 	display: block;
 	position: relative;
 	float: left;
-	width: 570px;
+	width: 490px;
 	height: 285px;
 	background: url('../img/pattern1.png') no-repeat center center;
     background-size: cover;
+    padding: 0 40px 0 40px;
 }
 
 .two {
 	display: block;
 	position: relative;
 	float: right;
-	width: 570px;
+	width: 490px;
 	height: 285px;
 	background: url('../img/pattern2.png') no-repeat center center;
     background-size: cover;
+    padding: 0 40px 0 40px;
 }
 
 /*FOOTER
