--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -66,7 +66,7 @@ h5 {
 
 button {
 	position: relative;
-	float: right;
+	float: left;
     border-color: #990ae3;
     background-color: #FFF;
     color: #000;
