--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -364,6 +364,12 @@ a:active {
 	color: #fff;
 }
 
+.recommend .push {
+	position: relative;
+	top: 50%:
+	transform: translateY(-50%);
+}
+
 .one {
 	display: block;
 	position: relative;
