--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -365,10 +365,10 @@ a:active {
 }
 
 .recommend .push {
-	height: 100%
-	position: relative;
-	top: 50%:
-	transform: translateY(-50%);
+    height: 100%;
+    position: relative;
+    top: 55%;
+    transform: translateY(-50%);
 }
 
 .one {
