--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -88,6 +88,12 @@ button {
     outline: none;
 }
 
+.inner {
+	width: 1176px;
+	height: 100%;
+	margin: 0 auto;
+}
+
 /*FORMS
 --------------------------------------*/
 
@@ -201,12 +207,6 @@ form.form input {
     position: relative;
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-}
-
-.inner {
-	width: 1176px;
-	height: 100%;
-	margin: 0 auto;
 }
 
 .logo {
@@ -393,6 +393,14 @@ a:active {
     padding: 0 40px 0 40px;
 }
 
+.thankyou {
+	text-align: center;
+}
+
+.thankyou button {
+	float: none;
+}
+
 /*FOOTER
 --------------------------------------*/
 .footer {
@@ -419,7 +427,6 @@ a:active {
     font-size: 14px;
     line-height: 2.5em;
     position: relative;
-    top: -150px;
 }
 
 .footersocial {
