--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -421,7 +421,13 @@ a:active {
 	opacity: 0.6;
 }
 
-.footer .inner div {
+.footer .inner .row {
+	position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.footer .inner .row div {
     float: left;
     width: 20%;
     font-size: 14px;
