--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -121,7 +121,7 @@ div#error_for_71232_79962pi_71232_79962 {
 }
 
 p.submit {
-	display: inline-block;
+	display: inline;
 	position: relative;
 }
 
@@ -133,7 +133,7 @@ form.form p {
 }
 
 form.form p.submit {
-    margin: 0 0 2em 473px !important;
+    margin: 0 0 0 0 !important;
     padding: 0;
 }
 
