--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -457,23 +457,23 @@ a:active {
 /*SHARE
 --------------------------------------*/
 
-@media only screen and (max-width: 1024px) {
-    
-    /* For tablets: */
-
-    .inner {
-	width: 748px;
-	height: 100%;
-	margin: 0 auto;
-	}
-}
-
-@media only screen and (max-width: 704px) {
+@media (min-width: 0px) and (max-width: 496px) {
     
     /* For mobile phones: */
 
     .inner {
 	width: 320px;
+	height: 100%;
+	margin: 0 auto;
+	}
+}
+
+@media (min-width: 496px) and (max-width: 894px) {
+    
+    /* For tablets: */
+
+    .inner {
+	width: 90%;
 	height: 100%;
 	margin: 0 auto;
 	}
