--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -496,7 +496,7 @@ a:active {
 
 	h4 {
 	font-family: 'Pebble', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-size: 21px;
+	font-size: 18px;
 	text-transform: uppercase;
     display: inline;
     -webkit-margin-before: 1.33em;
@@ -534,5 +534,38 @@ a:active {
 	.nav1 a {
 	margin-right: 25px;
 	}
+
+	.one {
+    display: block;
+    position: relative;
+    float: left;
+    width: 285px;
+    height: 285px;
+    background: url('../img/pattern1.png') no-repeat center center;
+    background-size: cover;
+    padding: 0 40px 0 40px;
+	}
+
+	.two {
+    display: block;
+    position: relative;
+    float: right;
+    width: 285px;
+    height: 285px;
+    background: url('../img/pattern2.png') no-repeat center center;
+    background-size: cover;
+    padding: 0 40px 0 40px;
+	}
+
+	.footer {
+    display: block;
+    background-color: #990AE3;
+    color: #fff;
+    width: 100%;
+    height: 450px !important;
+    position: relative;
+	}
+
+
 
 }
