--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -565,7 +565,115 @@ a:active {
     height: 450px !important;
     position: relative;
 	}
+}
 
+@media screen and (max-width: 496px) {
+    
+    /* For tablets: */
 
+    .inner {
+	width: 320px;
+	height: 100%;
+	margin: 0 auto;
+	}
 
+	h1 {
+	font-family: 'Pebble', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 48px;
+	color: #fff;
+	text-transform: uppercase;
+	line-height: 1em;
+	display: inline;
+    font-weight: bold;
+	}
+
+	h2 {
+	font-family: 'Pebble', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 36px;
+	color: #fff;
+	text-transform: uppercase;
+	line-height: 1em;
+	display: inline;
+    font-weight: bold;
+	}
+
+	h3 {
+	font-family: 'Pebble', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 24px;
+	text-transform: uppercase;
+	}
+
+	h4 {
+	font-family: 'Pebble', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 18px;
+	text-transform: uppercase;
+    display: inline;
+    -webkit-margin-before: 1.33em;
+    -webkit-margin-after: 1.33em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    font-weight: bold;
+	}
+
+	h5 {
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 18px;
+	display: inline;
+	font-weight: normal;
+	}
+
+	.logo {
+	display: block;
+	float: left;
+	width: 195px;
+	position: relative;
+	margin-right: 40px;
+  	top: 50%;
+  	transform: translateY(-50%);
+	}
+
+	.nav1 {
+	display: block;
+	float: left;
+	position: relative;
+  	top: 50%;
+  	transform: translateY(-50%);
+	}
+
+	.nav1 a {
+	margin-right: 25px;
+	}
+
+	.one {
+    display: block;
+    position: relative;
+    float: none;
+    width: 285px;
+    height: 285px;
+    background: url('../img/pattern1.png') no-repeat center center;
+    background-size: cover;
+    padding: 0 40px 0 40px;
+    margin: 0 auto;
+	}
+
+	.two {
+    display: block;
+    position: relative;
+    float: none;
+    width: 285px;
+    height: 285px;
+    background: url('../img/pattern2.png') no-repeat center center;
+    background-size: cover;
+    padding: 0 40px 0 40px;
+    margin: 0 auto;
+	}
+
+	.footer {
+    display: block;
+    background-color: #990AE3;
+    color: #fff;
+    width: 100%;
+    height: 450px !important;
+    position: relative;
+	}
 }
