--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -356,6 +356,11 @@ a:active {
     transform: translateY(-40%);
 }
 
+.below img {
+	width: 100%;
+    height: 100%;
+}
+
 .recommend {
 	display: block;
 	position: relative;
