--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -357,8 +357,8 @@ a:active {
 }
 
 .below img {
-	width: 100%;
-    height: 100%;
+    width: 100% !important;
+    height: 100% !important;
 }
 
 .recommend {
@@ -731,6 +731,13 @@ a:active {
     margin: 0 0 !important;
     padding: 0 0 !important;
     top: 25px;
+	}
+
+	.recommend .push {
+    height: 100%;
+    position: relative;
+    top: 50%;
+    transform: translateY(-35%);
 	}
 
 	.one {
