--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -20,6 +20,8 @@ html, body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+@font-face {font-family:'Pebble';src:url("../fonts/Pebble_W_Rg.eot?#iefix");src:url("../fonts/Pebble_W_Rg.eot?#iefix") format("eot"),url("../fonts/Pebble_W_Rg.woff") format("woff"),url("../fonts/Pebble_W_Rg.ttf") format("truetype");font-weight:400;font-style:normal}
+
 /*GLOBAL CLASSES
 --------------------------------------*/
 
@@ -449,7 +451,7 @@ a:active {
     float: left;
     text-align: center;
     width: 100%;
-    top: 5%;
+    top: -10%;
     transform: translateY(-50%);
 }
 
