--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -21,7 +21,7 @@ html, body {
 }
 
 @font-face {font-family:'Pebble';src:url("../fonts/Pebble_W_Rg.eot?#iefix");src:url("../fonts/Pebble_W_Rg.eot?#iefix") format("eot"),url("../fonts/Pebble_W_Rg.woff") format("woff"),url("../fonts/Pebble_W_Rg.ttf") format("truetype");font-weight:400;font-style:normal}
-@font-face {font-family:'iconfont';src:url("../fonts/Telia-Icon-Glyphs.woff") format("woff");font-weight:400;font-style:normal}
+@font-face {font-family:'iconfont';src:url("../fonts/Telia-Icon-Glyphs.woff") format("woff"),url("../fonts/Pebble_W_Rg.ttf") format("truetype");font-weight:400;font-style:normal}
 
 /*GLOBAL CLASSES
 --------------------------------------*/
