--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -660,6 +660,11 @@ a:active {
   	font-size: 24px;
 	} 
 
+	.navmobile a {
+  	font: 'iconfont';
+  	font-size: 24px;
+	} 
+
 	.nav1 a {
 	margin-right: 25px;
 	}
