--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -448,10 +448,11 @@ a:active {
 
 .footer .inner .row div {
     float: left;
-    width: 20%;
+    width: 18%;
     font-size: 14px;
     line-height: 2.5em;
     position: relative;
+    margin-right: 2%;
 }
 
 .footersocial {
