--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -100,6 +100,10 @@ button {
     margin: 0 auto;
 }
 
+.navmobile .more {
+	display: none;
+}
+
 /*FORMS
 --------------------------------------*/
 
