--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -100,57 +100,66 @@ button {
     margin: 0 auto;
 }
 
-.footer2
-    {
-        background-color: black;
-        margin-top: 1em;
-        padding-top: 1em;
-        padding-bottom: 1em;
-        text-align: center;
-        width: 100%;
-    }
+.navigation {
+    list-style: none;
+    background: #111;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 0;
+}
 
-        .footer2 .contactus
-    {
-        font-family: 'Open Sans', sans-serif;
-        font-weight: 400;
-        color: #e3e3e3;
-        text-decoration: none;
-        display: inline;
-    }
-        .footer2 .contactus:hover
-    {
-        color: white;
-    }
+.site-wrap {
+    min-width: 100%;
+    min-height: 100%;
+    background-color: #fff;
+    position: relative;
+    top: 0;
+    bottom: 100%;
+    left: 0;
+    z-index: 1;
+    padding: 4em;
+    background-color: #990AE3;
+    background-size: 200%;
+}
 
+.nav-trigger {
+    position: absolute;
+    clip: rect(0, 0, 0, 0);
+}
 
+label[for="nav-trigger"] {
+    position: fixed;
+    top: 15px;
+    left: 15px;
+    z-index: 2;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' width='30px' height='30px' viewBox='0 0 30 30' enable-background='new 0 0 30 30' xml:space='preserve'><rect width='30' height='6'/><rect y='24' width='30' height='6'/><rect y='12' width='30' height='6'/></svg>");
+    background-size: contain;
+}
 
-        .footer2 .more
-    {
+.nav-trigger:checked + label {
+    left: 215px;
+}
 
-        margin-left: 1em;
-        display: none;
-        font-family: 'Open Sans', sans-serif;
-        font-weight: 400;
-        color: #e3e3e3;
-        text-decoration: none;
-    }
-        .footer2 .more a
-    {
+.nav-trigger:checked ~ .site-wrap {
+    left: 200px;
+    box-shadow: 0 0 5px 5px rgba(0,0,0,0.5);
+}
 
-        margin-left: 2em;
+.nav-trigger + label, .site-wrap {
+    transition: left 0.2s;
+}
 
-        color: #e3e3e3;
-        text-decoration: none;
-    }
-        .footer2 .more a:hover
-    {
-        display: none;
-        font-family: 'Open Sans', sans-serif;
-        font-weight: 400;
-        color: white;
-        text-decoration: none;
-    }
+body {
+    overflow-x: hidden;
+}
 
 /*FORMS
 --------------------------------------*/
