--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -100,6 +100,14 @@ button {
     margin: 0 auto;
 }
 
+.more {
+	display: none;
+	z-index: 1;
+	height: 100%;
+	width: 80;
+	background-color: #fff;
+}
+
 /*FORMS
 --------------------------------------*/
 
