--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -454,7 +454,7 @@ a:active {
 
 .footer .inner .row {
 	position: relative;
-    top: -37%;
+    padding-top: 20px;
 }
 
 .footer .inner .row div {
@@ -464,6 +464,7 @@ a:active {
     line-height: 2.5em;
     position: relative;
     margin-right: 2%;
+    display: inline-block;
 }
 
 .footersocial {
