--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -206,12 +206,14 @@ form.form p.errors {
 }
 
 form.form input.text {
-    width: 100% !important;
+    width: 96% !important;
+    max-width: 600px !important;
     height: 46px !important;
     border: none !important;
     font-size: 16px;
     color: #333;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    padding: 0px 0px 0px 20px;
 }
 
 form.form input {
