--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -754,7 +754,8 @@ a:active {
 	}
 
 	form.form input.text {
-    width: 100% !important;
+    width: 96% !important;
+    max-width: 335px !important;
     height: 46px !important;
     border: none !important;
     font-size: 16px;
