--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -92,7 +92,7 @@ button {
     outline: none;
 }
 
-#proimarybutton {
+#primarybutton {
 	position: relative;
 	float: left;
     border-color: #990ae3;
