--- a/startsida2016/scss/_new.scss
+++ b/startsida2016/scss/_new.scss
@@ -1,3 +1,6 @@
+@font-face {font-family:'Pebble';src:url("../fonts/Pebble_W_Rg.eot?#iefix");src:url("../fonts/Pebble_W_Rg.eot?#iefix") format("eot"),url("../fonts/Pebble_W_Rg.woff") format("woff"),url("../fonts/Pebble_W_Rg.ttf") format("truetype");font-weight:400;font-style:normal}
+@font-face {font-family:'iconfont';src:url("../fonts/Telia-Icon-Glyphs.woff") format("woff"),url("../fonts/Pebble_W_Rg.ttf") format("truetype");font-weight:400;font-style:normal}
+
 header {
     background-color: #ffffff;
     display: block;
