--- a/startsida2016/scss/_settings.scss
+++ b/startsida2016/scss/_settings.scss
@@ -133,7 +133,7 @@ $header-sizes: (
     'h5': 16, /* 1em */
   ),
 );
-$header-color: $purple;
+$header-color: $black;
 $header-lineheight: 1.14;
 $header-margin-bottom: 1.25rem;
 $header-text-rendering: optimizeLegibility;
