--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -395,6 +395,7 @@ a:active {
 .content p {
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size: 16px;
+    color: #ffffff;
 }
 
 .break {
