--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -148,12 +148,12 @@ button {
 
 
 p.form-field.email.pd-text.required.no-label {
-	width: 100%;
-	float: left;
+    width: 100%;
+    float: none;
+    margin: 0 auto !important;
 }
 
 form.form p.no-label, form.form p.email-pref {
-    margin: 0 .5em .6em auto !important;
     padding: 0;
 }
 
