--- a/teliaic/css/styles.css
+++ b/teliaic/css/styles.css
@@ -670,7 +670,7 @@ a:active {
 	color: #fff;
 	text-transform: uppercase;
 	line-height: 1em;
-	display: inline;
+	display: block;
     font-weight: bold;
 	}
 
@@ -799,14 +799,16 @@ a:active {
 	}
 
 	form.form input.text {
-    width: 96% !important;
+    width: 100% !important;
     max-width: 335px !important;
     height: 46px !important;
     border: none !important;
     font-size: 16px;
     color: #333;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	}
+    margin: 0 auto;
+    display: block;
+    }
 
 	form.form p.submit input {
     position: relative;
